data/all_generated_tests/raw_wast_tests/call_indirect_InvalidorInconsistentControlFlowGraph_4444.wast
;; 3. **Test Description**:    - Define multiple function signatures in the type section and use mismatched `typeidx` in the `call_indirect` instruction.    - **Constraint**: Validates the dynamic type checking during execution.    - **CFG Relation**: Ensures CFG accounts for paths where mismatched signatures lead to traps due to incorrect type indexing.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (type (func (param i64) (result i64)))
    (table 1 funcref)
    (func (result i32) (i32.const 42))
    (elem (i32.const 0) 0)
    (func (result i64)
      (call_indirect (type 1) (i32.const 0))
    )
  )
  "type mismatch"
)